START: Java 17 support